yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: permissions
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: permissions
  template:
    metadata:
      labels:
        name: permissions
    spec:
      containers:
      - name: permissions
        image: docker.io/freegroup/thindexed-permissions:0.1.0-39
