yaml/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: permissions
  namespace: default
spec:
  hosts: ["app.<DOMAIN>"]
  #hosts: ["app.thindexed.personal.shoot.canary.k8s-hana.ondemand.com"]
  gateways: [ "gateway-app" ]
  http:
    - match:
      - uri:
          regex: "/permissions.+"
      redirect:
        uri: "/permissions"
    - match:
      - uri:
          exact: "/permissions"
      rewrite:
        uri: "/permissions-anonym.json"
      route:
        - destination:
            host: permissions
